14-sotothv1-service/00-sothoth-00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sothoth
  labels:
    name: sothoth
    environment: production
