14-sotothv1-service/00-sothoth-04-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sothoth-server
  namespace: sothoth
spec:
  replicas: 1
  selector:
    matchLabels:
      name: sothoth-server
  template:
    metadata:
      labels:
        name: sothoth-server
    spec:
      serviceAccountName: sothoth-server
      dnsPolicy: ClusterFirstWithHostNet
      containers:
      - name: sothoth-server
        image: openjdk:17.0.2-jdk
        imagePullPolicy: Always
        ports:
        - containerPort: 9000
        workingDir: /app
        command: ["/bin/sh", "-c"]
        args: ["java -jar sothoth-server-1.0-SNAPSHOT.jar"]
        volumeMounts:
        - name: file-cache-storage
          mountPath: /app/
        resources:
          requests:
            memory: "1024Mi"
            cpu: "2"
          limits:
            memory: "2048Mi"
            cpu: "8"
      - name: mysql
        image: mysql:8.0
        imagePullPolicy: Always
        volumeMounts:
        - name: sothoth-local-storge
          mountPath: /var/lib/mysql
        ports:
          - containerPort: 3306
        # 资源限制
        resources:
          requests:
            memory: "512Mi"
            cpu: "1"
          limits:
            memory: "1024Mi"
            cpu: "2"

      volumes:
      - name: file-cache-storage
        persistentVolumeClaim:
          claimName: sothoth-nfs-pvc
      - name: sothoth-local-storge
        persistentVolumeClaim:
          claimName: sothoth-local-pvc
