14-sotothv1-service/00-sothoth-05-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sothoth-server
  namespace: sothoth
spec:
  type: ClusterIP
  selector:
    name: "sothoth-server"
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
