14-sotothv1-service/02-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: sothoth
spec:
  type: ClusterIP
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
