14-sotothv1-service/05-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-server
  namespace: sothoth
spec:
  type: ClusterIP
  selector:
    app: backend-server
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
    - name: debug
      port: 5005
      targetPort: 5005
      protocol: TCP
