14-sotothv1-service/07-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-server
  namespace: sothoth
spec:
  type: ClusterIP
  selector:
    app: frontend-server
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
