14-sotothv1-service/10-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-server
  namespace: sothoth
spec:
  type: ClusterIP
  selector:
    app: nginx-server
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
