14-sotothv1-service/11-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gaiasec-ingress
  namespace: sothoth
  annotations:
    nginx.ingress.kubernetes.io/websocket-services: "nginx-server"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/upstream-vhost: "gaiasec.819819.xyz"
spec:
  ingressClassName: nginx
  rules:
  - host: gaiasec.ai.icsl.huawei.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-server
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-server
            port:
              number: 443
  tls:
  - hosts:
    - gaiasec.ai.icsl.huawei.com
    secretName: wildcard-secflow-tls
